Changes to project files, adding correct source file

--- a/ArgParser.NET.Sample/ArgParser.NET.Sample.csproj
+++ b/ArgParser.NET.Sample/ArgParser.NET.Sample.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArgParser.cs" />
+    <Compile Include="..\ArgParser.NET\ArgParser.cs">
+      <Link>ArgParser.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
