--- a/ArgParser.NET.Tests/ArgParser.NET.Tests.csproj
+++ b/ArgParser.NET.Tests/ArgParser.NET.Tests.csproj
@@ -39,8 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArgParser.NET\ArgParser.NET.csproj">
+      <Project>{5a151831-6a93-42c4-97ef-afaa53e53969}</Project>
+      <Name>ArgParser.NET</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
