Processing Options: Switch and Parameter

--- a/ArgParser.NET.Sample/ArgParser.NET.Sample.csproj
+++ b/ArgParser.NET.Sample/ArgParser.NET.Sample.csproj
@@ -41,14 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\ArgParser.NET\ArgParser.cs">
-      <Link>ArgParser.cs</Link>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArgParser.NET\ArgParser.NET.csproj">
+      <Project>{5a151831-6a93-42c4-97ef-afaa53e53969}</Project>
+      <Name>ArgParser.NET</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
