--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: csharp
 solution: ArgParser.NET.sln
+script:
+  - xbuild /p:Configuration=Release ArgParser.NET.sln
+  - mono ./packages/xunit.runners.*/tools/xunit.console.clr4.exe ./ArgParser.NET.Tests/bin/Release/ArgParser.NET.Tests.dll
