fix the path of console runner

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: csharp
 solution: ArgParser.NET.sln
 script:
   - xbuild /p:Configuration=Release ArgParser.NET.sln
-  - mono ./packages/xunit.runners.*/tools/xunit.console.clr4.exe ./ArgParser.NET.Tests/bin/Release/ArgParser.NET.Tests.dll
+  - mono ./packages/xunit.runner.console.*/tools/xunit.console.clr4.exe ./ArgParser.NET.Tests/bin/Release/ArgParser.NET.Tests.dll
